# lifecore_v3

./: .gitignore  README.md  pyproject.toml
configs/: amazon_fulfillment.yaml  autonomous_car.yaml  drone_delivery.json  drone_delivery.yaml  drone_fleet.yaml  factory.yaml
docs/: ROADMAP_PRODUCTION.md
examples/: amazon_fulfillment_simulation.py  drone_delivery_service.py  drone_fleet_gradio.py  drone_fleet_simulation.py  drone_swarm.py  llm_control_tower.py  maze_solver.py  pipeline_visualizer.py  rocket_resources.py  torseur_hierarchy.py
lifecore/: __init__.py  activation.py  agents.py  capability.py  coherence.py  config.py  core.py  event.py  goal.py  law.py  llm_interface.py  memory.py  need.py  pipeline.py  resource.py  robotics.py  sim_mujoco.py  sim_mujoco_panda.py  sim_mujoco_tasklearner.py  strategy.py
tests/: __init__.py  test_all.py  test_lifecore.py
venv311/: pyvenv.cfg
